@@ -480,7 +480,7 @@ class LMS
 			return FALSE;
 	}
 
-	function GetUserList($order='username,asc', $state=NULL, $network=NULL, $usergroup=NULL, $search=NULL, $time=NULL)
+	function GetUserList($order='username,asc', $state=NULL, $network=NULL, $usergroup=NULL, $search=NULL, $time=NULL, $sqlskey='AND')
 	{
 		list($order,$direction) = sscanf($order, '%[^,],%s');
 
@@ -552,10 +552,10 @@ class LMS
 			}
 
 		if($searchargs)
-			$sqlsarg = implode(' AND ',$searchargs);
-
+			$sqlsarg = implode(' '.$sqlskey.' ',$searchargs);
 		
 		$suspension_percentage = $this->CONFIG['finances']['suspension_percentage'];
+		
 		if($userlist = $this->DB->GetAll( 
 				'SELECT users.id AS id, '.$this->DB->Concat('UPPER(lastname)',"' '",'users.name').' AS username, status, users.address, zip, city, users.info AS info, message, '
 				.($network ? 'COALESCE(SUM((type * -2 + 7) * value), 0.00)/(CASE COUNT(DISTINCT nodes.id) WHEN 0 THEN 1 ELSE COUNT(DISTINCT nodes.id) END) AS balance ' : 'COALESCE(SUM((type * -2 + 7) * value), 0.00) AS balance ')
@@ -567,7 +567,7 @@ class LMS
 				.($network ? ' AND (ipaddr > '.$net['address'].' AND ipaddr < '.$net['broadcast'].')' : '')
 				.($usergroup ? ' AND usergroupid='.$usergroup : '')
 				.($time ? ' AND time < '.$time : '')
-				.($sqlsarg !='' ? ' AND '.$sqlsarg :'')
+				.($sqlsarg !='' ? ' AND ('.$sqlsarg.')' :'')
 				.' GROUP BY users.id, lastname, users.name, status, users.address, zip, city, users.info, message '
 		// ten fragment nie chcial dzialac na mysqlu		
 		//		.($indebted ? ' HAVING SUM((type * -2 + 7) * value) < 0 ' : '')
